--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
         "build": "vite build",
         "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview",
-        "server": "python3 backend/app.py",
+        "server": "python3 ../backend/app.py",
         "fullstack": "concurrently \"npm run dev\" \"npm run server\""
     },
     "dependencies": {
