--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,10 @@
         "@mui/icons-material": "^5.15.17",
         "@mui/material": "^5.15.17",
         "@vis.gl/react-google-maps": "^1.0.0",
+        "amazon-cognito-identity-js": "^6.3.12",
         "axios": "^1.6.8",
         "dotenv": "^16.4.5",
+        "global": "^4.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.23.1"
